[gd_scene load_steps=2 format=3 uid="uid://ccgr3x5ty4qn"]

[ext_resource type="Script" path="res://main.gd" id="1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ConsolePanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Console" type="TextEdit" parent="MainContainer/ConsolePanel"]
layout_mode = 2
size_flags_vertical = 3
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
virtual_keyboard_enabled = false
highlight_current_line = true

[node name="ResultContainer" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="RatePanel" type="PanelContainer" parent="MainContainer/ResultContainer"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="MainContainer/ResultContainer/RatePanel"]
layout_mode = 2

[node name="Header" type="Label" parent="MainContainer/ResultContainer/RatePanel/Container"]
layout_mode = 2
text = "Rate:"

[node name="HSeparator" type="HSeparator" parent="MainContainer/ResultContainer/RatePanel/Container"]
layout_mode = 2

[node name="Common" type="Label" parent="MainContainer/ResultContainer/RatePanel/Container"]
layout_mode = 2
text = "Common: 80%"

[node name="Uncommon" type="Label" parent="MainContainer/ResultContainer/RatePanel/Container"]
layout_mode = 2
text = "Uncommon: 15%"

[node name="Rare" type="Label" parent="MainContainer/ResultContainer/RatePanel/Container"]
layout_mode = 2
text = "Rare: 5%"

[node name="ResultPanel" type="PanelContainer" parent="MainContainer/ResultContainer"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="MainContainer/ResultContainer/ResultPanel"]
layout_mode = 2

[node name="Header" type="Label" parent="MainContainer/ResultContainer/ResultPanel/Container"]
layout_mode = 2
text = "Result"

[node name="HSeparator" type="HSeparator" parent="MainContainer/ResultContainer/ResultPanel/Container"]
layout_mode = 2

[node name="Common" type="Label" parent="MainContainer/ResultContainer/ResultPanel/Container"]
layout_mode = 2
text = "Common: %"

[node name="Uncommon" type="Label" parent="MainContainer/ResultContainer/ResultPanel/Container"]
layout_mode = 2
text = "Uncommon: %"

[node name="Rare" type="Label" parent="MainContainer/ResultContainer/ResultPanel/Container"]
layout_mode = 2
text = "Rare: %"

[node name="Button" type="Button" parent="MainContainer/ResultContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Roll"

[connection signal="pressed" from="MainContainer/ResultContainer/Button" to="." method="_on_Button_pressed"]
